Button Create User, Products and Category

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -6,12 +6,12 @@
     <title>Adidas - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body class="bg-primary ">
+  <body class="bg-success p-2" style="--bs-bg-opacity: .5;">
     <div class="container ">
         <div class="row ">
             <div class="col ">
-                <nav class="navbar navbar-expand-lg bg-warning ">
-                    <div class="container-fluid bg-warning">
+                <nav class="navbar navbar-expand-lg  ">
+                    <div class="container-fluid bg-success p-2 text-white">
                       <a class="navbar-brand" href="#">Adidas</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
         <div class="row mt-3 justify-content-center">
             <div class="col-8">
                 <div class="card">
-                    <div class="card-header text-center bg-warning" id="cardHeader">
+                    <div class="card-header text-center bg-success p-2 text-white" id="cardHeader">
                         <h5>Informacion del usuario</h5>
                     </div>
                     <div class="card-body">
