--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Adidas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body class="bg-secondary" >
+  <body class="bg-success p-2" style="--bs-bg-opacity: .5;" >
     <div class="container">
         <div class="row">
             <div class="col">
-                <nav class="navbar bg-warning">
-                    <div class="container-fluid">
+                <nav class="navbar">
+                    <div class="container-fluid bg-success p-2 text-white">
                         <span class="navbar-brand mb-0 h1 text-light">Adidas</span>
                     </div>
                 </nav>
@@ -20,7 +20,7 @@
         <div class="row mt-3 justify-content-center">
             <div class="col-6">
                 <div class="card">
-                    <div class="card-header text-center">
+                    <div class="card-header text-center bg-success p-2 text-white">
                         <h5>Control de acceso</h5>
                     </div>
                     <div class="card-body">
